# life_log

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: manual_initial.py
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/api/: attachments.py  auth.py  events.py  export.py
app/services/: event_service.py  storage_service.py
docs/: AGENTS.md  BACKUP.md  DEV_SPEC.md  ONE_PAGER.md  PROMPT_PLAN.md
tests/: test_api.py  test_e2e.py
